Update 5.2 Design identification and authentication strategy (e.g. people, devices and services).md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
@@ -103,3 +103,293 @@ To ensure consistency, regularly review and update the assignment of users to gr
 
 ---
 
+## 5.2.2 Authentication, Authorization and Accounting (AAA) (e.g. multifactor authentication (MFA), password-less authentication) ##
+
+Authentication, Authorization, and Accounting (AAA) refers to a security framework used to manage and control access to resources within a system. Here's a breakdown of each concept:
+
+1. **Authentication** is the process (happening right after Identification) of verifying the identity of a user, device, or system. It ensures that the entity attempting to gain access is who they claim to be. Examples of authentication methods are:
+- Password-Based Authentication: Users enter a secret password to prove their identity.
+- Two-Factor Authentication (2FA): Requires two forms of authentication, typically a password and something else (e.g., a one-time code sent to a phone).
+- Multi-Factor Authentication (MFA): Extends 2FA by requiring multiple verification methods, such as a password, biometric data (e.g., fingerprint), or a hardware token.
+- Passwordless Authentication: Users authenticate without passwords, using methods like biometrics (fingerprint or face ID), magic links sent via email, or hardware keys (e.g., FIDO2 keys).
+
+2. **Authorization:** determines what a user or system can do after they have been authenticated. It grants permissions and access rights based on policies or roles within the system. Some Authorization Methods are:
+- Role-Based Access Control (RBAC): Assigns permissions based on user roles (e.g., admin, user), controlling access to systems.
+- Attribute-Based Access Control (ABAC): Permissions are granted based on attributes of users and resources (e.g., user location, time of access).
+- Access Control Lists (ACLs): Specify which users or system processes are allowed to access specific resources.
+
+3. **Accounting:** involves tracking and recording the actions performed by a user or system, often for auditing, troubleshooting, and security purposes.
+
+Identification and authentication are like a simple yes or no system. Identification answers the question "Who are you?" while authentication checks if that identity is correct. Once someone is authenticated, they can be authorized, which means they get access to certain resources or information based on their verified identity.
+
+Accounting is a bit different; it can start right after identification, even before authentication is complete. It tracks user activities and can provide various outputs, like logs, alerts, or reports, helping organizations keep an eye on who is doing what.
+
+Examples of Accounting (Auditing) are:
+- Logging and Monitoring: Tracks user activities and system events to ensure accountability and detect security incidents.
+- Audit Trails: Detailed records of access and actions taken by users within a system.
+- Session Management: Monitors user sessions and ensures proper termination after inactivity to prevent unauthorized access.
+
+
+### Open Questions ###
+
+1. What are the three components of the AAA framework in security, and what does each one do?
+<details>
+  <summary>Show answer</summary>
+The AAA framework consists of Authentication, Authorization, and Accounting. Authentication verifies the identity of a user or system. Authorization grants access based on predefined policies or roles. Accounting tracks user activities to ensure accountability and provides logs for auditing and troubleshooting.
+</details>
+
+2. How does authentication verify the identity of a user or system?
+<details>
+  <summary>Show answer</summary>
+Authentication verifies a user's or system's identity by checking credentials, such as a password, biometric data, or security tokens, ensuring that the entity trying to access a system is legitimate.
+</details>
+
+3. What are the common methods of authentication, and how do they differ from each other?
+<details>
+  <summary>Show answer</summary>
+- Password-Based Authentication: Users enter a password to verify their identity.
+- Two-Factor Authentication (2FA): Requires two forms of verification (e.g., a password and a one-time code).
+- Multi-Factor Authentication (MFA): Requires multiple forms of verification, adding an extra layer beyond 2FA (e.g., password, biometric data, and hardware token).
+- Passwordless Authentication: Users authenticate using methods like biometrics or hardware keys, bypassing passwords entirely.
+</details>
+
+4. How does two-factor authentication (2FA) enhance security compared to password-based authentication?
+<details>
+  <summary>Show answer</summary>
+Two-Factor Authentication (2FA) enhances security by requiring two distinct forms of verification. This makes it harder for attackers to gain unauthorized access because, even if one factor (e.g., a password) is compromised, the attacker would still need the second factor (e.g., a one-time code).
+</details>
+
+5. What is multi-factor authentication (MFA), and how does it provide an extra layer of security?
+<details>
+  <summary>Show answer</summary>
+Multi-Factor Authentication (MFA) provides an extra layer of security by requiring multiple forms of verification from different categories, such as something you know (password), something you have (token or phone), or something you are (biometrics). This increases the difficulty for attackers to impersonate the user.
+</details>
+
+6. What is passwordless authentication, and what methods are commonly used to implement it?
+<details>
+  <summary>Show answer</summary>
+Passwordless Authentication removes the need for a password by using alternative authentication methods like biometrics (fingerprints, face ID), magic links sent to email, or hardware tokens (e.g., FIDO2 keys). It reduces the risks associated with weak or stolen passwords.
+</details>
+
+7. How does authorization differ from authentication, and what role does it play in access control?
+<details>
+  <summary>Show answer</summary>
+Authorization determines what a user or system can do after they are authenticated, whereas authentication only verifies the user's identity. Authorization is essential for granting the appropriate permissions based on the user's role or attributes.
+</details>
+
+8. What are the main methods of authorization, and how do they work?
+<details>
+  <summary>Show answer</summary>
+- Role-Based Access Control (RBAC): Assigns permissions based on roles (e.g., admin, user).
+- Attribute-Based Access Control (ABAC): Grants access based on attributes (e.g., user location, time of access).
+- Access Control Lists (ACLs): Specifies which users or systems can access specific resources.
+</details>
+
+9. How does role-based access control (RBAC) determine what a user can access in a system?
+<details>
+  <summary>Show answer</summary>
+Role-Based Access Control (RBAC) assigns users to roles (e.g., admin, manager, user), and each role has specific permissions associated with it. A user is authorized to access resources or perform actions based on their role within the organization.
+</details>
+
+10. What is accounting in the context of security, and how does it help in auditing and maintaining security?
+<details>
+  <summary>Show answer</summary>
+Accounting involves tracking user activities and actions within a system, such as logging events and auditing access. It helps identify suspicious activities, maintain records for compliance, and ensure accountability.
+</details>
+
+---
+
+## 5.2.3 Session Management ##
+
+Session management in information security refers to the process of handling the creation, maintenance, and termination of a user's interaction with a system or application. It ensures that once a user has authenticated, the system can track and control their activity for the duration of the session, while maintaining security, integrity, and privacy.
+
+Key Components of Session Management:
+
+| **Feature**             | **Description** |
+|--------------------------|-----------------|
+| **Session Creation**     | When a user successfully logs in, the system creates a session identified by a unique session ID. This ID may be stored in cookies or URL parameters and is used to track the user’s interactions with the system. |
+| **Session Maintenance**  | During the session, the server maintains the session ID and associated state (user identity, roles, privileges). The session ID is transmitted with each request so the server can recognize the user and maintain stateful interaction. |
+| **Session Termination**  | When the user logs out, the session should be terminated and the session ID invalidated. Sessions may also expire after inactivity, reducing misuse risk. Termination can occur in different ways: |
+| → Schedule Limitations   | Automatic logouts at a specified time (e.g., 5 p.m.) or restricted access during certain periods (e.g., weekends). |
+| → Login Limitation       | Restricts a single user ID to one active session at a time, preventing account sharing or multiple simultaneous logins. |
+| → Time-outs              | Sessions automatically expire after inactivity or a fixed duration, requiring re-authentication to continue. |
+| → Screensavers           | Trigger after inactivity, requiring re-authentication to regain access. Often used for physical security on endpoints. |
+
+Some examples of Session Management are:
+
+- Web Application:
+A user logs into an e-commerce website. The server issues a session ID, which is stored in a cookie on the user’s browser. As the user navigates through the site, their session ID is sent with each request, allowing the server to remember their shopping cart and preferences. When the user logs out or after a set period of inactivity, the session expires.
+
+- API Authentication:
+In a RESTful API, after a user authenticates, a session token (or access token) is provided, which the client app stores. For subsequent API requests, the token is included in the request headers to authenticate and authorize the user. Tokens can expire after a certain time, requiring the user to re-authenticate or refresh the token.
+
+- Single Sign-On (SSO):
+With SSO, a user logs in once and gains access to multiple systems or applications. Each application or system recognizes the user's session through shared session tokens or cookies, allowing the user to move between them without re-entering credentials.
+
+:bulb: Some Best Practices in Session Management:
+- Use Secure and HttpOnly Cookies: Prevent exposure of the session ID to JavaScript and enforce transport over HTTPS.
+- Regenerate Session IDs on Login: To prevent session fixation, issue a new session ID upon successful authentication.
+- Use Short Expiration Times: Both idle and absolute timeouts reduce the risk of long-lived sessions being exploited.
+- Implement Token-based Authentication (JWT): JSON Web Tokens (JWT) are a popular alternative to traditional session cookies, where the user’s state is encoded within the token itself. However, JWTs must also be carefully managed with expiration times and proper invalidation.
+
+:bulb: Session management is crucial for preventing risks like session hijacking, where an unauthorized user gains access to an active session and uses it for malicious purposes, either through negligence or sophisticated techniques. One effective way to prevent session hijacking is frequent re-authentication, which ensures that the user is consistently validated throughout their session. Many VPN solutions incorporate continuous re-authentication as a core feature, along with re-establishing encryption keys at regular intervals. This process, often transparent to the user, significantly increases the difficulty for an attacker to take control of an active session, thus enhancing overall security.
+
+### Open Questions ###
+
+1. What is session management in information security and why is it important?
+<details>
+  <summary>Show answer</summary>
+Session management refers to the process of creating, maintaining, and terminating a user's interaction with a system or application. It is crucial for securing user sessions and ensuring that access rights, privileges, and user data are protected from unauthorized access, session hijacking, and privilege escalation.
+</details>
+
+2. How is a session typically created when a user logs into a system?
+<details>
+  <summary>Show answer</summary>
+A session is created when a user successfully logs in, and the system generates a unique session ID. This session ID is often stored in cookies or URL parameters, which allow the system to recognize the user and maintain the session state across multiple requests.
+</details>
+
+3. What is the role of session ID in session management?
+<details>
+  <summary>Show answer</summary>
+The session ID is a unique identifier assigned to each user session. It helps the system track user activity during the session and ensures that the user’s identity, roles, and privileges are maintained throughout their interaction with the system. The session ID is sent with each request to enable a stateful interaction.
+</details>
+
+4. What are some common ways to terminate a session in an information system?
+<details>
+  <summary>Show answer</summary>
+- Manual logout: The user explicitly logs out of the system.
+- Session expiration: The system automatically ends a session after a period of inactivity.
+- Scheduled limitations: User sessions are terminated at a specific time (e.g., after business hours).
+- Time-out: Sessions automatically expire after a predefined duration.
+- Screensaver: Inactivity triggers a screensaver, requiring re-authentication to regain access.
+</details>
+
+5. What is the purpose of session expiration in session management?
+<details>
+  <summary>Show answer</summary>
+Session expiration ensures that inactive sessions are automatically terminated after a certain period, reducing the risk of unauthorized access. It helps prevent attacks like session hijacking by limiting the window of time an attacker could exploit an abandoned session.
+</details>
+
+6. What are the potential security risks associated with session management?
+<details>
+  <summary>Show answer</summary>
+- Session hijacking: An attacker gains unauthorized access to an active session.
+- Session fixation: An attacker sets a user's session ID to a known value and takes control of the session.
+- Privilege escalation: A user might gain more privileges than necessary during a session if not properly managed.
+</details>
+
+7. What are some best practices for managing sessions securely?
+<details>
+  <summary>Show answer</summary>
+- Using secure and HttpOnly cookies to store session IDs.
+- Regenerating session IDs after login to prevent session fixation.
+- Implementing short expiration times for both idle and absolute timeouts.
+- Using token-based authentication (e.g., JWT) for better session control.
+- Enforcing re-authentication after a certain period or for high-risk actions.
+</details>
+
+8. How does session hijacking work and how can it be prevented?
+<details>
+  <summary>Show answer</summary>
+Session hijacking occurs when an attacker steals or guesses a valid session ID and uses it to impersonate a legitimate user. It can be prevented by using secure communication channels (e.g., HTTPS), regenerating session IDs regularly, and employing two-factor authentication (2FA) or token-based authentication.
+</details>
+
+9. What is the significance of token-based authentication (e.g., JWT) in session management?
+<details>
+  <summary>Show answer</summary>
+Token-based authentication, such as JSON Web Tokens (JWT), allows the server to issue a token that contains the user's identity and access privileges. This token is then used to authenticate and authorize the user during the session, improving session management by reducing the need to store session IDs on the server and enhancing scalability.
+</details>
+
+10. How does session management contribute to preventing unauthorized access in a system?
+<details>
+  <summary>Show answer</summary>
+Session management ensures that only authenticated users with the correct session ID can access resources within the system. By maintaining and securely terminating sessions, implementing timeouts, and following best practices like token-based authentication, session management minimizes the chances of unauthorized users gaining access to sensitive data or systems.
+</details>
+
+---
+
+## 5.2.4 Registration, proofing, and establishment of identity ##
+
+**Identity proofing**, also known as **registration**, is the process of confirming someone’s identity, playing a critical role in the identity lifecycle and provisioning within organizations. For example, when a new employee joins a company, they must verify their identity by providing official documentation, such as a passport, driver’s license, or birth certificate. Human Resources (HR) verifies the authenticity of these documents and proceeds with the registration, which may be as simple as creating a user account and setting a password. For companies using more advanced authentication like biometrics, the registration may include capturing fingerprints or other biometric data. Modern online identity proofing leverages advanced technologies to confirm a user’s claimed identity securely and accurately. Techniques such as video verification are now widely used. In this process, a user is asked to record a short video holding their government-issued ID next to their face, allowing verification systems to match the ID photo with the live image. This approach uses facial recognition technology to compare facial features, ensuring a higher level of authenticity than still images alone.
+
+:bulb: Online Identity Proofing with **Knowledge-Based Authentication (KBA)**.
+In digital contexts, identity proofing often uses knowledge-based authentication (KBA). For example, when setting up an online account, users might be prompted to answer specific questions that only they should know, such as past addresses, car payments, or the make of a recent purchase. These questions are based on independent sources, like credit bureaus, and users are given limited time to answer.
+
+The National Institute of Standards and Technology (NIST) defines three Identity Assurance Levels (IALs) that reflect the confidence in a claimed identity:
+- IAL1 (Self-assertion): There’s minimal confidence, as identity proofing depends on the user’s self-assertion without verification. For example, users can enter fictitious names during online registration.
+- IAL2 (Proof required): Medium confidence, requiring some verification, such as submitting a scanned government ID or confirming an address.
+- IAL3 (In-person verification): High confidence, where the individual provides photo ID and supporting documents in person, often cross-checked against official databases.
+
+Beyond identity proofing, NIST also establishes Authenticator Assurance Levels (AALs), defining the confidence in the user’s control over authenticators:
+- AAL1: Low confidence, typically using passwords alone or single-factor authentication.
+- AAL2: High confidence, requiring two authentication factors.
+- AAL3: Very high confidence, involving two factors, with one being a cryptographic key and physical device for the strongest assurance.
+
+:link: Revision 4 of [SP 800-63](https://pages.nist.gov/800-63-4/) , Digital Identity Guidelines, intends to respond to the changing digital landscape that has emerged
+
+### Open Questions ###
+
+1. What is identity proofing, and why is it essential in the identity lifecycle and provisioning within organizations?
+<details>
+  <summary>Show answer</summary>
+Identity proofing is the process of confirming a person’s identity before granting them access to systems or services. It ensures that the person claiming an identity is indeed who they say they are, reducing fraud, unauthorized access, and other security risks. It is essential in the identity lifecycle as it verifies that the person registering for an account or service is legitimate and helps in creating secure user accounts for further access.
+</details>
+
+2. What types of official documentation are typically used in identity proofing during employee onboarding?
+<details>
+  <summary>Show answer</summary>
+During employee onboarding, common documentation used for identity proofing includes government-issued IDs like passports, driver’s licenses, or birth certificates. These documents serve as evidence of the employee's identity and are verified by Human Resources to ensure accuracy before proceeding with registration and account creation.
+</details>
+
+3. How does biometric authentication enhance the identity proofing process compared to traditional methods?
+<details>
+  <summary>Show answer</summary>
+Biometric authentication enhances identity proofing by providing a unique and difficult-to-impersonate verification method. Unlike traditional documents or knowledge-based answers, biometric data such as fingerprints or facial recognition offers a higher level of accuracy and security, reducing the risk of fraud or identity theft.
+</details>
+
+4. What is video verification, and how does it improve the accuracy and security of identity proofing?
+<details>
+  <summary>Show answer</summary>
+Video verification is a process where a user records a video holding a government-issued ID next to their face. The system uses facial recognition technology to compare the features in the ID photo with the live image, ensuring a higher level of authenticity. This process adds an extra layer of security, making it more difficult for fraudsters to use stolen or fake IDs.
+</details>
+
+5. What is knowledge-based authentication (KBA), and how is it used in online identity proofing?
+<details>
+  <summary>Show answer</summary>
+Knowledge-based authentication (KBA) is a security method used to verify a user's identity by asking them to answer questions that only they should know. These questions are often based on personal history, such as past addresses, financial transactions, or other information obtained from credit bureaus or public records.
+</details>
+
+6. How do knowledge-based authentication questions get generated, and what role do credit bureaus play in this process?
+<details>
+  <summary>Show answer</summary>
+KBA questions are typically generated from data that credit bureaus or other independent sources maintain about a person. These questions are designed to be things only the individual would know (e.g., previous addresses, recent car purchases, or mortgage details). Credit bureaus assist by providing accurate, up-to-date data that helps create personalized questions for identity verification.
+</details>
+
+7. What are the three Identity Assurance Levels (IALs) defined by NIST, and how do they differ in terms of identity verification?
+<details>
+  <summary>Show answer</summary>
+IAL1: Self-assertion with minimal confidence, where the user can claim an identity without verification (e.g., entering a fictitious name online).
+IAL2: Medium confidence, requiring verification like submitting a scanned government ID or confirming personal information.
+IAL3: High confidence, requiring in-person verification with photo ID and supporting documents, often cross-referenced against official databases.
+</details>
+
+8. How does IAL1 (Self-assertion) differ from IAL3 (In-person verification) in terms of confidence level and verification processes?
+<details>
+  <summary>Show answer</summary>
+IAL1 involves the least confidence because it relies solely on the user's assertion without any verification (e.g., online registration with arbitrary information). In contrast, IAL3 requires in-person verification with official photo ID and supporting documents, offering a much higher confidence level, often validated against official government databases.
+</details>
+
+9. What are Authenticator Assurance Levels (AALs), and how do they relate to the confidence in user authentication?
+<details>
+  <summary>Show answer</summary>
+Authenticator Assurance Levels (AALs) define the level of confidence in the security of an authentication process. They assess how securely the user controls the authentication factors (e.g., passwords, tokens). AALs range from low (AAL1) to very high (AAL3), with each level indicating the strength and reliability of the authentication method used.
+</details>
+
+10. How does AAL3 provide the highest level of confidence in user authentication, and what methods are involved in this process?
+<details>
+  <summary>Show answer</summary>
+AAL3 provides the highest level of confidence by requiring two factors for authentication, one of which must involve a physical device (e.g., a smart card or cryptographic key) in addition to something the user knows (e.g., a password). This combination ensures strong protection against unauthorized access, making it highly secure and resistant to fraud.
+</details>
+
+---
+
