Update 5.2 Design identification and authentication strategy (e.g. people, devices and services).md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
@@ -393,3 +393,33 @@ AAL3 provides the highest level of confidence by requiring two factors for authe
 
 ---
 
+## 5.2.5 Federated Identity Management (FIM) ##
+
+Think of **Federated Identity Management (FIM)** like a universal membership card for different organizations. Imagine you have a gym membership that also grants you access to a partnered swimming pool and yoga studio without needing separate registrations. Your gym verifies your identity, and because of a trust agreement between these businesses, the other facilities accept your membership without requiring another sign-up. 
+
+In the digital world, this is how federated identity works—one authentication (like logging in with Google or Facebook) grants access to multiple independent services (like for example reddit or medium), thanks to the trust relationship between the identity provider and the relying parties.
+
+In federated access, authentication responsibilities are split among three key entities, enabling users to access multiple independent systems without needing separate credentials for each.
+1. The User (Principal) – This is the individual seeking access to a service. Instead of creating new login credentials for each system, they authenticate once with an identity provider.
+2. The Identity Provider (IdP) – This is a trusted entity, like Google or Microsoft, that verifies the user's identity. It holds the user’s authentication details and confirms their identity when requested by other systems.
+3. The Relying Party (Service Provider) – This is the system or application the user wants to access, such as Reddit or Medium. Instead of managing its own authentication, it relies on the identity provider to confirm who the user is.
+
+
+sequenceDiagram
+    participant User as User (Principal)
+    participant IdP as Identity Provider (IdP)
+    participant SP as Service Provider (Relying Party)
+
+    User->>SP: Request access to service
+    SP->>IdP: Redirect to IdP for authentication
+    User->>IdP: Provide credentials (username/password, MFA, etc.)
+    IdP-->>User: Authentication success + issue token/assertion
+    User->>SP: Present token/assertion from IdP
+    SP->>IdP: Validate token/assertion
+    IdP-->>SP: Confirm user identity
+    SP-->>User: Grant access to service
+
+
+
+
+:brain: Remember the names and the roles of the 3 entities involved in federated access: Principal, IdP and Service Provider.
