Update 5.2 Design identification and authentication strategy (e.g. people, devices and services).md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
@@ -404,7 +404,7 @@ In federated access, authentication responsibilities are split among three key e
 2. The Identity Provider (IdP) – This is a trusted entity, like Google or Microsoft, that verifies the user's identity. It holds the user’s authentication details and confirms their identity when requested by other systems.
 3. The Relying Party (Service Provider) – This is the system or application the user wants to access, such as Reddit or Medium. Instead of managing its own authentication, it relies on the identity provider to confirm who the user is.
 
-
+``` mermaid
 sequenceDiagram
     participant User as User (Principal)
     participant IdP as Identity Provider (IdP)
@@ -419,7 +419,9 @@ sequenceDiagram
     IdP-->>SP: Confirm user identity
     SP-->>User: Grant access to service
 
-
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
 
 
 :brain: Remember the names and the roles of the 3 entities involved in federated access: Principal, IdP and Service Provider.
