Update 5.2 Design identification and authentication strategy (e.g. people, devices and services).md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
@@ -404,24 +404,91 @@ In federated access, authentication responsibilities are split among three key e
 2. The Identity Provider (IdP) – This is a trusted entity, like Google or Microsoft, that verifies the user's identity. It holds the user’s authentication details and confirms their identity when requested by other systems.
 3. The Relying Party (Service Provider) – This is the system or application the user wants to access, such as Reddit or Medium. Instead of managing its own authentication, it relies on the identity provider to confirm who the user is.
 
+The trust relationship between these three components allows for single authentication to grant access across multiple services, improving security while reducing the need for multiple passwords. This is the foundation of Single Sign-On (SSO) and Federated Identity Management (FIM).
+
 ``` mermaid
 sequenceDiagram
-    participant User as User (Principal)
-    participant IdP as Identity Provider (IdP)
-    participant SP as Service Provider (Relying Party)
+    participant User as User: Principal
+    participant IdP as Identity Provider: IdP
+    participant SP as Service Provider: Relying Party
 
     User->>SP: Request access to service
     SP->>IdP: Redirect to IdP for authentication
-    User->>IdP: Provide credentials (username/password, MFA, etc.)
+    User->>IdP: Provide credentials: username/password, MFA, etc.
     IdP-->>User: Authentication success + issue token/assertion
     User->>SP: Present token/assertion from IdP
     SP->>IdP: Validate token/assertion
     IdP-->>SP: Confirm user identity
     SP-->>User: Grant access to service
 
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
-
-
 :brain: Remember the names and the roles of the 3 entities involved in federated access: Principal, IdP and Service Provider.
+
+Federated Identity Management (FIM) differs from Single Sign-On (SSO) by allowing a user to authenticate once and gain access not only to systems within the organization but also to external, third-party systems. Unlike SSO, where a user gains access to multiple internal systems after one authentication (such as through Microsoft’s Active Directory), FIM enables access to systems outside the organization's direct control, broadening its scope.
+
+### Open Questions ###
+
+1. What is Federated Identity Management (FIM) and how does it work?  
+<details>
+  <summary>Show answer</summary>
+Federated Identity Management (FIM) is a system that allows users to authenticate once with an identity provider (IdP) and gain access to multiple independent services or systems without needing separate login credentials for each. It simplifies authentication by establishing a trust relationship between different entities, enabling users to access both internal and third-party systems.
+</details>
+
+2. How does FIM compare to a gym membership that grants access to partnered services like a swimming pool or yoga studio?  
+<details>
+  <summary>Show answer</summary>
+FIM is like a gym membership that grants access to additional services (e.g., swimming pool, yoga studio) without requiring separate sign-ups. The gym verifies the user's identity, and because of an agreement with the other facilities, the user can access those services using the same credentials.
+</details>
+
+3. What are the three key entities involved in Federated Identity Management?  
+<details>
+  <summary>Show answer</summary>
+The three key entities are:  
+- Principal (User)  
+- Identity Provider (IdP)  
+- Relying Party (Service Provider)  
+</details>
+
+4. Who is the Principal in the context of Federated Identity Management?  
+<details>
+  <summary>Show answer</summary>
+The Principal, or User, is the individual who seeks access to a service. Instead of creating new login credentials for each system or service, the Principal authenticates once with an identity provider.
+</details>
+
+5. What is the role of the Identity Provider (IdP) in Federated Identity Management?  
+<details>
+  <summary>Show answer</summary>
+The Identity Provider (IdP) is a trusted entity, like Google or Microsoft, responsible for verifying the user's identity. It holds the user’s authentication details and confirms their identity when requested by other systems or services.
+</details>
+
+6. How does the Relying Party (Service Provider) fit into the Federated Identity Management model?  
+<details>
+  <summary>Show answer</summary>
+The Relying Party (Service Provider) is the system or application the user wants to access, such as Reddit or Medium. It relies on the identity provider to authenticate and confirm the user’s identity, rather than managing its own authentication process.
+</details>
+
+7. How does the trust relationship between the Principal, IdP, and Service Provider enable single authentication across multiple services?  
+<details>
+  <summary>Show answer</summary>
+The trust relationship enables users to authenticate once with the IdP and gain access to multiple services without logging in separately to each one. The IdP confirms the user's identity, and the Service Providers trust that confirmation.
+</details>
+
+8. What are the key benefits of using Federated Identity Management for users?  
+<details>
+  <summary>Show answer</summary>
+Key benefits include the convenience of a single set of credentials to access multiple services, improved security by reducing password fatigue, and easier identity management across different platforms.
+</details>
+
+9. How does Federated Identity Management differ from Single Sign-On (SSO)?  
+<details>
+  <summary>Show answer</summary>
+SSO provides access to multiple internal systems after a single authentication within one organization. FIM extends this concept to external, third-party systems as well, allowing access beyond the organization’s direct control.
+</details>
+
+10. In what ways does Federated Identity Management expand the scope of user access compared to Single Sign-On?  
+<details>
+  <summary>Show answer</summary>
+FIM expands the scope by enabling users to authenticate once and access not only systems within the organization but also external, third-party services. This broadens the authentication process and allows a unified experience across different platforms.
+</details>
+
+---
